--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: "UBUNTU";
+    src: url("/public/fonts/ubuntu-v20-latin-regular.woff2");
+  }
